@@ -1,6 +1,7 @@
 OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.7 Engineering
+	Added total operation count in back-monitor (ITS#2983)
 
 OpenLDAP 2.2.6 Release
 	Fixed slapd SASL callback handling (ITS#2926)
